Implementação do Mouse Scroll Animation na Section - Home.
Implementada a Animação Mouse Scroll na Section - Home padrão para os três acessos.

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,9 @@ section#hero div.hero div h1 span { position: absolute; top: 0px; left: 0px; hei
 section#hero div.hero div h1:nth-child(1) span { animation-delay: 0.5s; }
 section#hero div.hero div h1:nth-child(2) span { animation-delay: 1.5s; }
 section#hero div.hero div h1:nth-child(3) span { animation-delay: 2.5s; }
+section#hero div.hero div.middle { position: absolute; left: 50%; top: 98%; transform: translate(-50%, -98%); }
+section#hero div.hero div.middle div.mouse { width: 40px; height: 65px; border: 2px solid #B1BECD; border-radius: 40px; }
+section#hero div.hero div.middle div.mouse::before { content: ''; width: 12px; height: 12px; position: absolute; left: 50%; top: 10px; transform: translateX(-50%); background-color: #B1BECD; border-radius: 50%; opacity: 1; animation: mouse_scroll 2s infinite; }
 /* End Hero Section */
 /* Services Section */
 section#services div.services div.service_top h1.section_title { font-size: 2.6rem; font-weight: 500; }
@@ -117,6 +120,7 @@ section#footer div.footer p span.footer_span { color: #496D96; }
     @keyframes text_reveal_box { 50% { width: 100%; left: 0%; } 100% { width: 0%; left: 100%; } }
     @keyframes text_reveal { 100% { color: #B1BECD; } }
     @keyframes text_reveal_name { 100% { color: #496D96; font-weight: 700; } }
+    @keyframes mouse_scroll { from { opacity: 1; top: 10px; } to { opacity: 0; top: 45px; } }
 /* End General Keyframes */
 /* Media Query For Tablet */
 @media only screen and (min-width: 768px) {
