--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ section#about div.about div.col_left div.company_logo { height: 100%; width: 100
 section#contact div.contact div h1.section_title { font-size: 2.6rem; }
 section#contact div.contact { flex-direction: column; max-width: 1500px; margin: 0px auto; }
 section#contact div.contact div p { max-width: 1300px; padding: 0px 30px; font-weight: 400; }
+section#contact div.contact div p span.contact_span { color: #29323C; font-weight: 700; }
 section#contact div.contact div.contact_items { min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
 section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 250px; padding: 20px; text-align: center; border-radius: 10px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition-property: box-shadow, transform; }
 section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: -20px; height: 100%; width: 100%; clip-path: circle(180px at center 0); background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); opacity: 0.8; z-index: -1;  }
@@ -178,16 +179,16 @@ section#footer div.footer p span.footer_span { color: #496D96; }
     section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.70); }
     /* End Projects Section */
     /* About Section */
-    section#about div.about div.col_left { width: 600px; height: 400px; }
-    section#about div.about div.col_left { width: 400px; height: auto; margin-top: 50px; }
     section#about div.about h1.section_title { font-size: 4rem; }
     section#about div.about p.col_right_description { font-size: 1.6rem; padding: 0px 40px; }
-    section#about div.about div.col_right div.testimonials_row { padding: 0px 5px; }
-    section#about div.about div.col_right div.testimonials_row div.testimonials_col { flex: 100%; max-width: 100%; }
+    section#about div.about div.col_right div.testimonials_row div.testimonials_col { flex-basis: 45%; max-width: 45%; margin: 2%; }
+    section#about div.about div.col_left { width: 600px; height: 400px; }
+    section#about div.about div.col_left { width: 300px; height: auto; margin-top: 50px; }
     /* End About Section */
     /* Contact Section */
     section#contact div.contact div h1.section_title { font-size: 4rem; }
     section#contact div.contact div p { font-size: 1.6rem; padding: 0px 40px; }
+    section#contact div.contact div.contact_items { margin-top: 70px; flex-direction: row; flex-wrap: wrap; }
     /* End Contact Section */
     /* Footer Section */
     section#footer div.footer h2 { font-size: 1.5rem; }
